# shzgptr-gui

./: Cargo.toml  README.md
src/: app.rs  components.rs  lib.rs  main.rs  markdown.rs  openai.rs
src/components/: message_box.rs
src/openai/: structs.rs
